<resources>
    <string name="app_name">Furta-cor</string>
    <string name="internettext1"><b>Parece que você não está conectado a uma rede.</b></string>
    <string name="internettext2">"<b>Tente: \n   • Desativar o Modo offline \n   • Ativar Dados móveis ou Wi-Fi \n   • Verificar o sinal na sua área</b>"</string>
    <string name="internettext3"><b>Pesquisar ou inserir URL</b></string>
    <string name="emailtitle0">"CAIXA DE ENTRADA"</string>
    <string name="emailtitle1">"Entrega de mercadorias"</string>
    <string name="emailtitle2">"Mercadoria transportada"</string>
    <string name="emailtitle3">"Transportadora"</string>
    <string name="emailtitle4">"Atenção"</string>
    <string name="emailtitle5">"Preparando a mercadoria"</string>
    <string name="emailtitle6">"Segurança das mercadorias"</string>
    <string name="emailtitle7">"Novos produtos entregues"</string>
    <string name="emailtitle8">"Horário dos funcionários"</string>
    <string name="emailmontanha2">"MONTANHA.CORP..."</string>
    <string name="emailt1">"Entrega de\nmercadorias"</string>
    <string name="emailt2">"Mercadoria\ntransportada"</string>
    <string name="emailt5">"Preparando a\nmercadoria"</string>
    <string name="emailt6">"Segurança das\nmercadorias"</string>
    <string name="emailt7">"Novos produtos\nentregues"</string>
    <string name="emailt8">"Horário dos\nfuncionários"</string>
    <string name="email1text">"Atenção especial é solicitada ao conteúdo desta mensagem, pois trata-se de um assunto delicado e sigiloso. \nNo intuito de alertar e assegurar a integridade de todas as partes envolvidas, gostaria de informar sobre uma entrega de carga incomum e sensível que está prestes a ocorrer. Devo ressaltar que as informações aqui contidas são estritamente confidenciais e requerem a mais alta discrição. \nConforme acordado, o carregamento de ferro contrabandeado, proveniente de fontes que não podem ser mencionadas abertamente, está previsto para chegar ao seu destino dentro dos próximos dias. É fundamental que todos os procedimentos de segurança sejam meticulosamente seguidos para garantir o êxito dessa operação tão delicada."</string>
    <string name="email2text">"Vimos aqui novamente para informá-lo que sua mercadoria foi transportada e está à caminho de sua localização dentre de alguns dias. Em caso de ocorrer algum imprevisto entraremos em contato. Prentendemos entregar uma mercadoria em boas condições. \n Se tiver dúvidas solicitamos entrar em contato conosco, faremos de tudo para ajudar-lhe."</string>
    <string name="email3text">"Olá somos a transportadora FORPORT INC, estamos enviando esta mensagem para informá-lo de que sua mercadoria já foi preparada, estamos organizando para enviar à entrega e conseguir chegar na sua localização de forma mais segura e em boas condições. Dentro de um dia, podemos dizer que estará à caminho, então entraremos em contato novamente. \n \nAgradecemos pela sua parceria e confiança."</string>
    <string name="email4text">"Aqui é o chefe, fique em alerta, pois tem mercadorias para chegar, estou entrando em contato por esse email para avisá-lo. Quando a carga chegar agilize e arrume as coisas.\nDepois vou ver o andamento de tudo, espero não encontrar nenhum problema. Entre em contato se algo estiver fora de controle."</string>
    <string name="email5text">"Oi somos a SOUTHERN ORG, estamos enviando esta mensagem para informá-lo de que sua mercadoria está sendo preparada. Devemos ter a mercadoria dentro de alguns dias, logo após entraremos em contanto por meio da transportadora. Esperamos que aguarde e mantenha a atenção no email. \n\nAgradecemos a sua compreensão."</string>
    <string name="email6text">"A próxima entrega de cargas será delicada e muito importante tomar cuidado, então por medidas prenventivas colocaremos nossos seguranças para seguir essa mercadoria cuidadosamente e garantir que chegará a sua localização.\nEsperamos não ocorrer imprevistos, por isso uma alta segurança com os nossos olhares atentos nessa mercadoria.\nPor outro lado, queremos a cooperação da favela, para que não façam nada de imprudente ao ponto de prejudicar essa entrega. Caso contrário dificultará as próximas colaborações de materiais."</string>
    <string name="email7text">"Olá, entregamos as mercadorias que foram solicitada o conteúdo desta mensagem trata-se de um assunto para informar sobre a carga.\nFoi realizada a entrega de cargas materiais importantes na favela há algumas horas. Devo ressaltar que as informações aqui contidas são estritamente confidenciais, caso haja diferenças nos produtos, pode entrar em contato conoscos prudentemente por esse email.\nDesejamos que conforme acordado, o carregamento esteja em perfeitas condições e quantidades. Agradecemos pela parceria."</string>
    <string name="email8text">"Os funcionários entrará na favela mais tarde, para não levantarmos tanta suspeitas.\nEntraremos por volta das 00:30, então esteja com tudo pronto para agilizar os dois lados do trabalho e mantenha-nos informados sobre os moradores, ou poderá ocorrer atrasar nosso trabalho.\nAo sairmos à caminho da favela avisaremos, esperemos terminar isso o mais rápido possível. Esperamos que os dois lados sejam muito precavidos em suas ações. "</string>
    <string name="emailgambit">"GAMBIT"</string>
    <string name="emailforport">"FORPORT INC"</string>
    <string name="emailciborgue">"CIBORGUE"</string>
    <string name="emailsouthern">"SOUTHERN ORG"</string>
    <string name="emailmontanha">"MONTANHA.CORPORATION INDUSTRIAL"</string>
    <string name="emaildata1">"2 de mai."</string>
    <string name="emaildata2">"26 de abr."</string>
    <string name="emaildata3">"25 de abr."</string>
    <string name="emaildata4">"21 de abr."</string>
    <string name="emaildata5">"20 de abr."</string>
    <string name="emaildata6">"19 de abr."</string>
    <string name="emaildata7">"17 de abr."</string>
    <string name="emaildata8">"6 de abr."</string>
    <string name="snapmenu1">"Estamos preocupados, m..."</string>
    <string name="snapmenu2">"Ok chefe"</string>
    <string name="snapmenu3">"Blz, mais tarde eu vou ae"</string>
    <string name="snapmenu4">"Cara, eu vou ver com o c..."</string>
    <string name="snapmenu5">"Saindo rapidamente da f..."</string>
    <string name="snapmenu6">"Blz, qualquer coisa dá u..."</string>
    <string name="snapmenu7">"Eu precisava da sua aju..."</string>
    <string name="snapc1msg1">" Oi filho vou chegar em \n casa mais tarde hoje"</string>
    <string name="snapc1msg2">" Pai cadê você?"</string>
    <string name="snapc1msg3">" Já faz dois dias e você não \n falou mais nada"</string>
    <string name="snapc1msg4">" Estamos preocupados, manda \n mensagem quando puder"</string>
    <string name="snapc1h1">"16:12"</string>
    <string name="snapc1h2">"06:37"</string>
    <string name="snapc1h3">"06:38"</string>
    <string name="snapc1dt1">" 7 de maio "</string>
    <string name="snapc1dt2">" 9 de maio "</string>
    <string name="snapc2msg1">" Fala chefe, boa tarde"</string>
    <string name="snapc2msg2">" Cê tá sabendo de algo?"</string>
    <string name="snapc2msg3">" Sobre o desaparecimento \n do pessoal na favela"</string>
    <string name="snapc2msg4">" Fiquei sabendo de uns papos \n através dos moradores"</string>
    <string name="snapc2msg5">" Vem aqui no morro, vamos \n trocar uma ideia"</string>
    <string name="snapc2msg6">" Ok chefe"</string>
    <string name="snapc2dt2">" 2 de maio "</string>
    <string name="snapc2h1">"09:53"</string>
    <string name="snapc2h2">"09:54"</string>
    <string name="snapc2h3">"15:56"</string>
    <string name="snapc2h4">"11:07"</string>
    <string name="snapc2h5">"11:10"</string>
    <string name="snapc3msg1">" Opa cara, suave?"</string>
    <string name="snapc3msg2">" Iai mano"</string>
    <string name="snapc3msg3">" Cara, eu precisava de \n uma ajuda sua"</string>
    <string name="snapc3msg4">" Tem algumas coisas estranhas \n acontecendo"</string>
    <string name="snapc3msg5">" Blz, mais tarde eu vou ae"</string>
    <string name="snapc3h1">"13:42"</string>
    <string name="snapc3h2">"13:48"</string>
    <string name="snapc3h3">"13:53"</string>
    <string name="snapc3h4">"13:55"</string>
    <string name="snapc4msg1">" Bom dia irmão"</string>
    <string name="snapc4msg2">" Fala irmão"</string>
    <string name="snapc4msg3">" Você viu meu pai?"</string>
    <string name="snapc4msg4">" Não, aconteceu algo?"</string>
    <string name="snapc4msg5">" Ele não apareceu em casa \n ontem e até agora nenhum \n sinal dele"</string>
    <string name="snapc4msg6">" Cara, eu vou ver com o chefe e \n qualquer coisa eu te aviso"</string>
    <string name="snapc4h1">"09:12"</string>
    <string name="snapc4h2">"09:25"</string>
    <string name="snapc4h3">"09:44"</string>
    <string name="snapc4h4">"09:45"</string>
    <string name="snapc4h5">"09:47"</string>
    <string name="snapc4h6">"09:48"</string>
    <string name="snapc5msg1">" Ae man"</string>
    <string name="snapc5msg2">" Ontem a noite tava rolando \n uma movimentação um pouco \n estranha"</string>
    <string name="snapc5msg3">" Como assim?"</string>
    <string name="snapc5msg4">" Tinha uns cara que eu nunca \n tinha visto por aqui"</string>
    <string name="snapc5msg5">" Sairam correndo da favela"</string>
    <string name="snapc5h1">"10:01"</string>
    <string name="snapc5h2">"10:05"</string>
    <string name="snapc5h3">"10:06"</string>
    <string name="snapc5dt1">" 1 de maio "</string>
    <string name="snapc6msg1">" Ae Vitinho chegou alguma \n coisa aí?"</string>
    <string name="snapc6msg2">" Aqui ainda não chegou \n nada"</string>
    <string name="snapc6msg3">" Blz, qualquer coisa dá um \n toque"</string>
    <string name="snapc6h1">"16:22"</string>
    <string name="snapc6h2">"16:34"</string>
    <string name="snapc6h3">"16:36"</string>
    <string name="snapc6dt1">" 24 de abril "</string>
    <string name="snapc7msg1">" Salva o meu contato ae,\n número novo"</string>
    <string name="snapc7msg2">" Tá bom"</string>
    <string name="snapc7msg3">" Ah, chegou umas mercadorias \n aqui"</string>
    <string name="snapc7msg4">" Eu precisava da sua ajuda \n depois"</string>
    <string name="snapc7h1">"18:02"</string>
    <string name="snapc7h2">"18:30"</string>
    <string name="snapc7h3">"18:31"</string>
    <string name="snapc7dt1">" 19 de abril "</string>
    <string name="snapt1">"Filho"</string>
    <string name="snapt2">"Lucas Ciborgue"</string>
    <string name="snapt3">"Paulinho"</string>
    <string name="snapt4">"Kaio"</string>
    <string name="snapt5">"Hugo Bar"</string>
    <string name="snapt6">"Vitinho"</string>
    <string name="snapt7">"Edna"</string>
    <string name="notem1">"TODAS AS NOTAS"</string>
    <string name="notem2">"7 NOTAS"</string>
    <string name="noteq1">"Dia 1 de maio:\n   - Pedro \n   - Davi \n   - Carlos \n   - Bruno \nDia 29 de abril:\n   - João ..."</string>
    <string name="noteq2">"Mês de abril:\n   - Água;\n   - Luz;\n   - <strike>Internet.</strike>   \n \n Mês de maio\n   - Água ..."</string>
    <string name="noteq3">"Esse mês chegou cerca de 700 materiais; \n Mês passado foram 450; \n Tivemos um aumento ..."</string>
    <string name="noteq4">"   - Comprar ração;\n   - Ligar pra Dona Márcia;\n   - Tirar o lixo;\n   - Pagar as contas; ..."</string>
    <string name="noteq5">"Mês de maio:\n   - Apenas 1 para chegar(até o momento);\n\nMês de abril:\n   - dia 2 ..."</string>
    <string name="noteq6">"EMPRESAS:\n\n- FORPORT INC;\n- GAMBIT;\n- SOUTHERN ORG;\n- MONTANHA ..."</string>
    <string name="noteq7">"Os materiais estão acabando rapidamente, precisaremos de mais dentro de alguns dias ou vamos entrar ..."</string>
    <string name="notemt1">"DESAPARECIDOS"</string>
    <string name="notemt2">"CONTAS"</string>
    <string name="notemt3">"NÚMERO DE CARGAS"</string>
    <string name="notemt4">"PARA FAZER"</string>
</resources>