<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#007E9E"
    tools:context=".Msg1Act">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="415dp"
        android:layout_height="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/barrasuperior" />


    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="412dp"
        android:layout_height="98dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/barrainferior"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/btnmenu5"
        android:layout_width="84dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="2dp"
        android:background="@drawable/btnmenu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977" />

    <ImageButton
        android:id="@+id/btnvoltarmsg1"
        android:layout_width="70dp"
        android:layout_height="42dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btnvoltar1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.006"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="239dp"
        android:layout_height="69dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/msg1"
        android:fontFamily="@font/libre_franklin_bold"
        android:gravity="left"
        android:text="@string/snapc1msg1"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/libre_franklin_bold"
        android:gravity="left"
        android:text="@string/snapt1"
        android:textColor="@color/white"
        android:textSize="31sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnvoltarmsg1"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="74dp"
        android:layout_height="3dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/barra"
        android:fontFamily="@font/libre_franklin_bold"
        android:gravity="left"
        android:textSize="31sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnvoltarmsg1"
        app:layout_constraintTop_toTopOf="@+id/textView30" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="186dp"
        android:layout_height="49dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/msg2"
        android:fontFamily="@font/libre_franklin_bold"
        android:gravity="left"
        android:text="@string/snapc1msg2"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="244dp"
        android:layout_height="68dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/msg2"
        android:fontFamily="@font/libre_franklin_bold"
        android:gravity="left"
        android:text="@string/snapc1msg3"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="296dp"
        android:layout_height="75dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/msg2"
        android:fontFamily="@font/libre_franklin_bold"
        android:gravity="left"
        android:text="@string/snapc1msg4"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@drawable/msgdata"
        android:fontFamily="@font/libre_franklin_bold"
        android:gravity="center"
        android:text="@string/snapc1dt1"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@drawable/msgdata"
        android:fontFamily="@font/libre_franklin_bold"
        android:gravity="center"
        android:text="@string/snapc1dt2"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="7dp"
        android:fontFamily="@font/libre_franklin_bold"
        android:text="@string/snapc1h1"
        android:textAlignment="viewEnd"
        android:textColor="@color/grey"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView6"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="7dp"
        android:fontFamily="@font/libre_franklin_bold"
        android:gravity="left"
        android:text="@string/snapc1h2"
        android:textColor="@color/grey"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="7dp"
        android:fontFamily="@font/libre_franklin_bold"
        android:gravity="left"
        android:text="@string/snapc1h2"
        android:textColor="@color/grey"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="7dp"
        android:fontFamily="@font/libre_franklin_bold"
        android:gravity="left"
        android:text="@string/snapc1h3"
        android:textColor="@color/grey"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView13"
        app:layout_constraintEnd_toEndOf="@+id/textView13" />

</androidx.constraintlayout.widget.ConstraintLayout>