<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Email8Act">

    <ScrollView
        android:layout_width="412dp"
        android:layout_height="600dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView51"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="355dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="35dp"
                android:fontFamily="@font/libre_franklin_semibold"
                android:justificationMode="inter_word"
                android:text="@string/email8text"
                android:textColor="#000"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView66" />

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imageView49"
        android:layout_width="412dp"
        android:layout_height="98dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/barrainferior"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/btnmenu15"
        android:layout_width="84dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="2dp"
        android:background="@drawable/btnmenu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977" />

    <ImageView
        android:id="@+id/imageView50"
        android:layout_width="415dp"
        android:layout_height="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.629"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/barrasuperior" />

    <ImageView
        android:id="@+id/imageView51"
        android:layout_width="413dp"
        android:layout_height="181dp"
        android:background="@drawable/emailheader"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView50"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/btnvoltaremail"
        android:layout_width="25dp"
        android:layout_height="38dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/btnvoltaremail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView50" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="276dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="17dp"
        android:fontFamily="@font/libre_franklin_bold"
        android:text="@string/emailtitle8"
        android:textColor="#fff"
        android:textSize="33sp"
        app:layout_constraintStart_toEndOf="@+id/btnvoltaremail"
        app:layout_constraintTop_toBottomOf="@+id/imageView50" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="114dp"
        android:layout_height="19dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="7dp"
        android:fontFamily="@font/libre_franklin_bold"
        android:text="@string/emailgambit"
        android:textColor="#fff"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/btnvoltaremail" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/libre_franklin_bold"
        android:text="@string/emaildata7"
        android:textColor="#fff"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView51"
        app:layout_constraintStart_toEndOf="@+id/btnvoltaremail" />
</androidx.constraintlayout.widget.ConstraintLayout>